New overlays implementation prototype